added main.py to server and added .gitignore
test build for hello world client, set the c++ standard to c++17, added blank main.py to server

--- a/client/CMakeLists.txt
+++ b/client/CMakeLists.txt
@@ -1,5 +1,10 @@
 cmake_minimum_required(VERSION 3.14)
 
+set(CMAKE_CXX_STANDARD 17)
+set(CMAKE_CXX_STANDARD_REQUIRED true)
+
+set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/bin)
+
 project(Multiplayer-Game-Client)
 
 add_executable(multi-client ./src/main.cpp)
