--- a/client/CMakeLists.txt
+++ b/client/CMakeLists.txt
@@ -10,7 +10,7 @@ project(Multiplayer-Game-Client)
 add_library(glad-lib ./libs/glad.c) # compile glad separately to supress pedantic warnings from it
 target_include_directories(glad-lib PUBLIC ./include/)
 
-add_executable(multi-client ./src/main.cpp ./src/app.cpp)
+add_executable(multi-client ./src/main.cpp ./src/app.cpp ./src/stbimpl.c)
 target_include_directories(multi-client PUBLIC ./include/)
 if(MINGW)
 	target_link_directories(multi-client PUBLIC ./build/ ./libs/mingw/)
