changed client->server disconnect packet

--- a/config.json
+++ b/config.json
@@ -1,8 +1,8 @@
 {
     "HEADER": 64,
     "PORT": 5050,
-    "SERVER_MODE": "local",
-    "SERVER_IP": "192.168.137.1",
+    "SERVER_MODE": "localhost",
+    "SERVER_IP": "127.0.0.1",
     "ENCODE_FORMAT": "utf-8",
     "DISCONNECT_MESSAGE": "!DISCONNECT"
 }
