--- a/client/bin/configs/graphics-settings.json
+++ b/client/bin/configs/graphics-settings.json
@@ -3,6 +3,7 @@
 		"shadows":false,
 		"shadowResolution":1,
 		"bloomBlurPasses":0,
+		"menuBlur":0,
 		"antialiasing":false,
 		"antialiasSamples":1
 	},
@@ -10,6 +11,7 @@
 		"shadows":true,
 		"shadowResolution":512,
 		"bloomBlurPasses":1,
+		"menuBlur":1,
 		"antialiasing":false,
 		"antialiasSamples":1
 	},
@@ -17,6 +19,7 @@
 		"shadows":true,
 		"shadowResolution":1024,
 		"bloomBlurPasses":2,
+		"menuBlur":1,
 		"antialiasing":false,
 		"antialiasSamples":1
 	},
@@ -24,6 +27,7 @@
 		"shadows":true,
 		"shadowResolution":2048,
 		"bloomBlurPasses":4,
+		"menuBlur":2,
 		"antialiasing":false,
 		"antialiasSamples":1
 	},
@@ -31,6 +35,7 @@
 		"shadows":true,
 		"shadowResolution":2048,
 		"bloomBlurPasses":4,
+		"menuBlur":2,
 		"antialiasing":true,
 		"antialiasSamples":4
 	},
@@ -38,6 +43,7 @@
 		"shadows":true,
 		"shadowResolution":4096,
 		"bloomBlurPasses":8,
+		"menuBlur":8,
 		"antialiasing":true,
 		"antialiasSamples":5
 	}
