--- a/client/CMakeLists.txt
+++ b/client/CMakeLists.txt
@@ -17,10 +17,10 @@ add_executable(multi-client ./src/main.cpp ./src/app.cpp
 target_include_directories(multi-client PUBLIC ./include/)
 if(MINGW)
 	target_link_directories(multi-client PUBLIC ./build/ ./libs/mingw/)
-	target_link_libraries(multi-client PUBLIC glfw3 opengl32 gdi32 glad-lib)
+	target_link_libraries(multi-client PUBLIC glfw3 opengl32 gdi32 glad-lib ws2_32 wsock32)
 elseif(WIN32)
 	target_link_directories(multi-client PUBLIC ./build/ ./libs/win/)
-	target_link_libraries(multi-client PUBLIC glfw3 opengl32 gdi32 glad-lib)
+	target_link_libraries(multi-client PUBLIC glfw3 opengl32 gdi32 glad-lib ws2_32 wsock32)
 elseif(UNIX)
 	target_link_directories(multi-client PUBLIC ./build/ ./libs/linux/)
 	target_link_libraries(multi-client PUBLIC GL dl pthread X11 glfw3 glad-lib)
