--- a/server/config.json
+++ b/server/config.json
@@ -14,12 +14,13 @@
 			[[6, 1], ["", "l"]],
 			[[0, 2], ["", "rl"]],
 			[[1, 2], ["red-planet", "bl"]],
+			[[5, 2], ["", "t"]],
 			[[0, 3], ["", "bl"]],
 			[[1, 3], ["", "t"]],
 			[[6, 3], ["", "b"]],
 			[[0, 4], ["", "tl"]],
-			[[5, 4], ["", "l"]],
 			[[6, 4], ["yellow-moon", "tr"]],
+			[[7, 4], ["", "l"]],
 			[[0, 5], ["", "l"]],
 			[[2, 5], ["", "b"]],
 			[[0, 6], ["", "l"]],
@@ -28,7 +29,7 @@
 			[[7, 6], ["", "b"]],
 			[[0, 7], ["", "l"]],
 			[[6, 7], ["", "r"]],
-			[[7, 7], ["middle", ""]]
+			[[7, 7], ["middle", "tl"]]
 		],
 		[
 			[[0, 0], ["", "tl"]],
@@ -44,12 +45,13 @@
 			[[6, 1], ["", "l"]],
 			[[0, 2], ["", "rl"]],
 			[[1, 2], ["red-planet", "bl"]],
+			[[5, 2], ["", "t"]],
 			[[0, 3], ["", "bl"]],
 			[[1, 3], ["", "t"]],
 			[[6, 3], ["", "b"]],
 			[[0, 4], ["", "tl"]],
-			[[5, 4], ["", "l"]],
 			[[6, 4], ["yellow-moon", "tr"]],
+			[[7, 4], ["", "l"]],
 			[[0, 5], ["", "l"]],
 			[[2, 5], ["", "b"]],
 			[[0, 6], ["", "l"]],
@@ -58,7 +60,7 @@
 			[[7, 6], ["", "b"]],
 			[[0, 7], ["", "l"]],
 			[[6, 7], ["", "r"]],
-			[[7, 7], ["middle", ""]]
+			[[7, 7], ["middle", "tl"]]
 		],
 		[
 			[[0, 0], ["", "tl"]],
@@ -74,12 +76,13 @@
 			[[6, 1], ["", "l"]],
 			[[0, 2], ["", "rl"]],
 			[[1, 2], ["red-planet", "bl"]],
+			[[5, 2], ["", "t"]],
 			[[0, 3], ["", "bl"]],
 			[[1, 3], ["", "t"]],
 			[[6, 3], ["", "b"]],
 			[[0, 4], ["", "tl"]],
-			[[5, 4], ["", "l"]],
 			[[6, 4], ["yellow-moon", "tr"]],
+			[[7, 4], ["", "l"]],
 			[[0, 5], ["", "l"]],
 			[[2, 5], ["", "b"]],
 			[[0, 6], ["", "l"]],
@@ -88,7 +91,7 @@
 			[[7, 6], ["", "b"]],
 			[[0, 7], ["", "l"]],
 			[[6, 7], ["", "r"]],
-			[[7, 7], ["middle", ""]]
+			[[7, 7], ["middle", "tl"]]
 		],
 		[
 			[[0, 0], ["", "tl"]],
@@ -104,12 +107,13 @@
 			[[6, 1], ["", "l"]],
 			[[0, 2], ["", "rl"]],
 			[[1, 2], ["red-planet", "bl"]],
+			[[5, 2], ["", "t"]],
 			[[0, 3], ["", "bl"]],
 			[[1, 3], ["", "t"]],
 			[[6, 3], ["", "b"]],
 			[[0, 4], ["", "tl"]],
-			[[5, 4], ["", "l"]],
 			[[6, 4], ["yellow-moon", "tr"]],
+			[[7, 4], ["", "l"]],
 			[[0, 5], ["", "l"]],
 			[[2, 5], ["", "b"]],
 			[[0, 6], ["", "l"]],
@@ -118,7 +122,7 @@
 			[[7, 6], ["", "b"]],
 			[[0, 7], ["", "l"]],
 			[[6, 7], ["", "r"]],
-			[[7, 7], ["middle", ""]]            
+			[[7, 7], ["middle", "tl"]]
 		]
 	]
 }
