--- a/config.json
+++ b/config.json
@@ -3,7 +3,5 @@
     "PORT": 5050,
 
     "SERVER_MODE": "local",
-    "SERVER_IP": "127.0.0.1",
-    "ENCODE_FORMAT": "utf-8",
-    "DISCONNECT_MESSAGE": "!DISCONNECT"
+    "SERVER_IP": "127.0.0.1"
 }
