--- a/client/CMakeLists.txt
+++ b/client/CMakeLists.txt
@@ -24,7 +24,7 @@ elseif(WIN32)
 	target_link_libraries(multi-client PUBLIC glfw3 opengl32 gdi32 glad-lib ws2_32 wsock32)
 elseif(UNIX)
 	target_link_directories(multi-client PUBLIC ./build/ ./libs/linux/)
-	target_link_libraries(multi-client PUBLIC GL dl pthread X11 glfw3 glad-lib)
+	target_link_libraries(multi-client PUBLIC glfw3 glad-lib GL dl pthread X11)
 endif()
 if(MSVC)
 	target_compile_options(multi-client PUBLIC /W4 /WX)
