--- a/server/config.json
+++ b/server/config.json
@@ -41,24 +41,56 @@
 			[[6, 0], ["", "t"]],
 			[[7, 0], ["", "t"]],
 			[[0, 1], ["", "l"]],
-			[[5, 1], ["green-star", "rb"]],
-			[[6, 1], ["", "l"]],
-			[[0, 2], ["", "rl"]],
-			[[1, 2], ["red-planet", "bl"]],
-			[[5, 2], ["", "t"]],
-			[[0, 3], ["", "bl"]],
-			[[1, 3], ["", "t"]],
-			[[6, 3], ["", "b"]],
-			[[0, 4], ["", "tl"]],
-			[[6, 4], ["yellow-moon", "tr"]],
-			[[7, 4], ["", "l"]],
+			[[5, 1], ["", "r"]],
+			[[6, 1], ["blue-moon", "lb"]],
+			[[0, 2], ["", "l"]],
+			[[1, 2], ["", "b"]],
+			[[6, 2], ["", "t"]],
+			[[0, 3], ["", "l"]],
+			[[1, 3], ["yellow-gear", "tr"]],
+			[[2, 3], ["", "l"]],
+			[[5, 3], ["", "b"]],
+			[[0, 4], ["", "l"]],
+			[[4, 4], ["", "r"]],
+			[[5, 4], ["green-planet", "tl"]],
 			[[0, 5], ["", "l"]],
-			[[2, 5], ["", "b"]],
-			[[0, 6], ["", "l"]],
-			[[2, 6], ["blue-gear", "tr"]],
-			[[3, 6], ["", "l"]],
+			[[2, 5], ["red-star", "rb"]],
+			[[3, 5], ["", "l"]],
+			[[0, 6], ["", "lb"]],
+			[[2, 6], ["", "t"]],
+			[[7, 6], ["", "b"]],
+			[[0, 7], ["", "tl"]],
+			[[6, 7], ["", "r"]],
+			[[7, 7], ["middle", "tl"]]
+		],
+		[
+			[[0, 0], ["", "tl"]],
+			[[1, 0], ["", "tr"]],
+			[[2, 0], ["", "tl"]],
+			[[3, 0], ["", "t"]],
+			[[4, 0], ["", "tb"]],
+			[[5, 0], ["", "t"]],
+			[[6, 0], ["", "t"]],
+			[[7, 0], ["", "t"]],
+			[[0, 1], ["", "l"]],
+			[[3, 1], ["", "r"]],
+			[[1, 1], ["", "b"]],
+			[[4, 1], ["red-moon", "tl"]],
+			[[0, 2], ["", "l"]],
+			[[1, 2], ["green-gear", "tr"]],
+			[[2, 2], ["", "l"]],
+			[[0, 3], ["", "l"]],
+			[[6, 3], ["yellow-star", "rb"]],
+			[[7, 3], ["yellow-star", "l"]],
+			[[0, 4], ["", "l"]],
+			[[6, 4], ["", "t"]],
+			[[0, 5], ["", "lb"]],
+			[[0, 6], ["", "tl"]],
+			[[2, 6], ["", "r"]],
+			[[3, 6], ["blue-planet", "lb"]],
 			[[7, 6], ["", "b"]],
 			[[0, 7], ["", "l"]],
+			[[3, 7], ["", "t"]],
 			[[6, 7], ["", "r"]],
 			[[7, 7], ["middle", "tl"]]
 		],
@@ -71,54 +103,22 @@
 			[[5, 0], ["", "t"]],
 			[[6, 0], ["", "t"]],
 			[[7, 0], ["", "t"]],
-			[[0, 1], ["", "l"]],
-			[[5, 1], ["green-star", "rb"]],
-			[[6, 1], ["", "l"]],
-			[[0, 2], ["", "rl"]],
-			[[1, 2], ["red-planet", "bl"]],
-			[[5, 2], ["", "t"]],
-			[[0, 3], ["", "bl"]],
-			[[1, 3], ["", "t"]],
-			[[6, 3], ["", "b"]],
-			[[0, 4], ["", "tl"]],
-			[[6, 4], ["yellow-moon", "tr"]],
-			[[7, 4], ["", "l"]],
-			[[0, 5], ["", "l"]],
-			[[2, 5], ["", "b"]],
-			[[0, 6], ["", "l"]],
-			[[2, 6], ["blue-gear", "tr"]],
-			[[3, 6], ["", "l"]],
-			[[7, 6], ["", "b"]],
-			[[0, 7], ["", "l"]],
-			[[6, 7], ["", "r"]],
-			[[7, 7], ["middle", "tl"]]
-		],
-		[
-			[[0, 0], ["", "tl"]],
-			[[1, 0], ["", "t"]],
-			[[2, 0], ["", "t"]],
-			[[3, 0], ["", "tr"]],
-			[[4, 0], ["", "tl"]],
-			[[5, 0], ["", "t"]],
-			[[6, 0], ["", "t"]],
-			[[7, 0], ["", "t"]],
-			[[0, 1], ["", "l"]],
-			[[5, 1], ["green-star", "rb"]],
-			[[6, 1], ["", "l"]],
-			[[0, 2], ["", "rl"]],
-			[[1, 2], ["red-planet", "bl"]],
-			[[5, 2], ["", "t"]],
-			[[0, 3], ["", "bl"]],
-			[[1, 3], ["", "t"]],
-			[[6, 3], ["", "b"]],
-			[[0, 4], ["", "tl"]],
-			[[6, 4], ["yellow-moon", "tr"]],
-			[[7, 4], ["", "l"]],
-			[[0, 5], ["", "l"]],
-			[[2, 5], ["", "b"]],
-			[[0, 6], ["", "l"]],
-			[[2, 6], ["blue-gear", "tr"]],
-			[[3, 6], ["", "l"]],
+			[[0, 1], ["", "lr"]],
+			[[1, 1], ["red-gear", "lb"]],
+			[[6, 1], ["", "b"]],
+			[[0, 2], ["", "l"]],
+			[[1, 2], ["", "t"]],
+			[[6, 2], ["green-moon", "tr"]],
+			[[7, 2], ["", "l"]],
+			[[0, 3], ["", "l"]],
+			[[0, 4], ["", "l"]],
+			[[2, 4], ["blue-star", "rb"]],
+			[[3, 4], ["", "l"]],
+			[[7, 4], ["", "b"]],
+			[[0, 5], ["", "lb"]],
+			[[6, 5], ["", "r"]],
+			[[7, 5], ["yellow-planet", "tl"]],
+			[[0, 6], ["", "tl"]],
 			[[7, 6], ["", "b"]],
 			[[0, 7], ["", "l"]],
 			[[6, 7], ["", "r"]],
